--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -7,8 +7,10 @@ html
     link(rel='stylesheet', href='../stylesheets/style.css')
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css')
     link(rel='stylesheet', href='https://fonts.googleapis.com/css?family=Nunito:100,400,300')
+    link(rel='stylesheet', href='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css')
     script(type='text/javascript', src="../js/jquery.min.js")
     script(type='text/javascript', src='../js/bootstrap.min.js')
+    script(type='text/javascript', src='https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js')
 
   body
     nav.navbar.navbar-inverse.navbar-fixed-top
